{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "GamePlay",
            "id": "cbb70594-e052-4310-b0b0-17f6f2006645",
            "actions": [
                {
                    "name": "LeftMove",
                    "type": "Button",
                    "id": "7630fc5b-69a5-491d-98bf-802acfc7ecce",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightMove",
                    "type": "Button",
                    "id": "4c8fe86f-4161-4758-8fe6-3119fd10e215",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UpMove",
                    "type": "Button",
                    "id": "5bf4ba6d-d292-4cd6-9205-7de36463bc12",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DownMove",
                    "type": "Button",
                    "id": "2d22f4d3-d771-49a2-ab0c-b9a5cd1cf5a5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftColoration",
                    "type": "Button",
                    "id": "d1ace1c5-ea94-4255-a5f4-c1cce8ed5221",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightColoration",
                    "type": "Button",
                    "id": "ec40a1c8-6633-46c3-ae8f-684b76ac6d43",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UpColoration",
                    "type": "Button",
                    "id": "cf73d4a7-5de7-4b12-9755-66253db69d96",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DownColoration",
                    "type": "Button",
                    "id": "f79fe613-9b17-400a-a78f-9b81f72f711b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "347a20fe-d8f0-4110-b086-61a0903b135e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3ebe72e5-744c-487c-8424-c31c1d93240b",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "59431d88-fd4d-4bce-8a32-8d2b008e646d",
                    "path": "<XInputController>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "239c7892-b8c5-431a-9e76-98726f10868c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d1e0b002-eaea-4cd6-8661-cc8ac590f851",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b6b10a72-8d20-483d-8ac8-fdc29f398422",
                    "path": "<XInputController>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "90c6fded-c425-4c8e-bcc6-d9038930ab65",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DownMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cd143b40-4563-46fc-8873-5756b895584d",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DownMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ec260df4-d317-4b3b-b96c-9da4b9067810",
                    "path": "<XInputController>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DownMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "96583232-c33f-4b56-ac93-84903a6b21d9",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "061b8b6a-bd45-4d3d-81bd-53c001a0edce",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1d5d407f-c610-4577-8190-a65bc54829b9",
                    "path": "<XInputController>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3aaba620-95f1-4123-9b7c-ff2241b0d6b2",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftColoration",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bbaf2333-54a6-414a-af54-e58847fb3e72",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftColoration",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d624a82b-9e0a-4e77-b890-fc45c6c9cb26",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftColoration",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5310f460-07df-4538-9178-bfdd92083d9e",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightColoration",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "547eb0b6-13c3-4def-a87d-e6ffae6d1dc9",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightColoration",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f89bdb8-2e7a-4d19-b4eb-18ddad4e3f8f",
                    "path": "<XInputController>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightColoration",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b78df123-5eb0-4ba3-acc9-efa0f0059851",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpColoration",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55f2c6c8-ea79-4316-946a-53d25a1621bd",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpColoration",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d7f8024a-5f19-47e2-90d4-05f45e014bef",
                    "path": "<XInputController>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpColoration",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c945165c-df67-44f0-b1b3-489dbb4e0c1a",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DownColoration",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d8f7b55f-cb12-4fb7-97ea-2bf8ff4e49f1",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DownColoration",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6fcd0f2f-ef68-4034-9ad6-36cc0bbaded7",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DownColoration",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "17014657-5fa5-4a1a-a16e-3ad14fb0e332",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "db5a3ef6-c041-4810-8475-19f4a0d2eedb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "07e09339-4842-4f45-97dd-f02ca864e8a7",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}